--- a/module-batch/src/main/resources/application.yml
+++ b/module-batch/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-
+  redis:
+    host: localhost
+    port: 6379
 logging:
   level:
     org.hibernate.SQL: debug
