--- a/module-database/jpa/src/main/resources/application-jpa-test.yml
+++ b/module-database/jpa/src/main/resources/application-jpa-test.yml
@@ -13,6 +13,8 @@ spring:
         format_sql: true
         default_batch_fetch_size: 1000
     defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: create
 
 logging:
   level:
