--- a/module-web/test11-kafka-consumer/src/main/resources/application.yml
+++ b/module-web/test11-kafka-consumer/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  config:
+    import:
+      - application-jpa.yml
+
+  threads:
+    virtual:
+      enabled: true
+
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost}:${KAFKA_BROKER_PORT:9092}
     listener:
@@ -16,3 +24,7 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       fetch-max-wait: 10s
       fetch-min-size: 10KB
+
+logging:
+  level:
+    org.hibernate.SQL: debug
